initial impl of multi files db