@@ -11,6 +11,7 @@ import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
@@ -18,6 +19,7 @@ import java.util.Objects;
 import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ConcurrentMap;
+import java.util.stream.Collectors;
 
 import org.mapdb.HTreeMap;
 import org.tinylog.Logger;
@@ -34,10 +36,14 @@ import net.openhft.chronicle.map.ChronicleMap;
  * @param <K> Type of the unique identifier
  * @param <V> Type of the single element
  */
+@SuppressWarnings("unchecked")
 public interface ChronicleDao<K, V> {
     ConcurrentMap<String, Object> LOCKS = new ConcurrentHashMap<>();
+    ConcurrentMap<String, Set<String>> DATA_FILE_CACHE = new ConcurrentHashMap<>();
+    ConcurrentMap<String, HTreeMap<?, String>> KEY_MAP_CACHE = new ConcurrentHashMap<>();
     String DATA_DIR = "/data/", INDEX_DIR = "/indexes/", FILES_DIR = "/files/", BACKUP_DIR = "/backup/",
-            DATA_FILE = "data", CORRUPTED_FILE = "corrupted", RECOVER_FILE = "recovery", ENTRY_SIZE_FILE = "entrySize";
+            DATA_FILE = "data", CORRUPTED_FILE = "corrupted", RECOVER_FILE = "recovery", ENTRY_SIZE_FILE = "entrySize",
+            KEY_FILE = "keys";
     String[] DB_DIRS = { DATA_DIR, INDEX_DIR, FILES_DIR, BACKUP_DIR };
 
     /**
@@ -91,7 +97,7 @@ public interface ChronicleDao<K, V> {
      * If an object needs indexes, use this to declare.
      */
     default List<String> indexFileNames() throws IOException {
-        return List.of();
+        return Collections.emptyList();
     }
 
     private void createDataDirs(final String dataPath) {
@@ -106,11 +112,36 @@ public interface ChronicleDao<K, V> {
         }
     }
 
+    private void populateKeyMap(final Set<String> dataFiles, final HTreeMap<K, String> keyMap) throws IOException {
+        for (final String file : dataFiles) {
+            try (final var db = getDb(file)) {
+                for (final K key : db.keySet()) {
+                    keyMap.put(key, file);
+                }
+            }
+        }
+    }
+
     /**
      * Create the folders required on init
+     *
      */
     default void createDataDirs() {
         createDataDirs(dataPath());
+        final Object lock = LOCKS.computeIfAbsent(dataPath(), k -> new Object());
+        synchronized (lock) {
+            if (!KEY_MAP_CACHE.containsKey(dataPath())) {
+                final var dataFiles = getDataFiles();
+                if (dataFiles.size() > 1) {
+                    final HTreeMap<K, String> keyMap = MAP_DB.getMemoryDirectDb();
+                    try {
+                        populateKeyMap(dataFiles, keyMap);
+                    } catch (final IOException e) {
+                    }
+                    KEY_MAP_CACHE.put(dataPath(), keyMap);
+                }
+            }
+        }
     }
 
     /**
@@ -159,15 +190,6 @@ public interface ChronicleDao<K, V> {
     }
 
     /**
-     * Create db by dynamic entry size from file and not from the java
-     */
-    default void createDbWithEntrySize() throws IOException {
-        final var newDb = CHRONICLE_DB.getDb(name(), getCurrentEntrySize(), averageKey(), averageValue(),
-                dataPath() + DATA_DIR + DATA_FILE, bloatFactor());
-        newDb.close();
-    }
-
-    /**
      * Get the db object, close with closeDb()
      * 
      * @return ChronicleMap<K, V>
@@ -176,6 +198,33 @@ public interface ChronicleDao<K, V> {
     private ChronicleMap<K, V> getDb() throws IOException {
         return CHRONICLE_DB.getDb(name(), entries(), averageKey(), averageValue(), dataPath() + DATA_DIR + DATA_FILE,
                 bloatFactor());
+    }
+
+    private ChronicleMap<K, V> getDb(final String fileName) throws IOException {
+        return CHRONICLE_DB.getDb(name(), entries(), averageKey(), averageValue(), dataPath() + DATA_DIR + fileName,
+                bloatFactor());
+    }
+
+    /**
+     * Cache to store data file names
+     */
+    private Set<String> getDataFiles() {
+        return DATA_FILE_CACHE.computeIfAbsent(dataPath(), k -> {
+            try {
+                final Set<String> dataFiles = CHRONICLE_UTILS.getFileList(dataPath() + DATA_DIR).stream()
+                        .filter(file -> file.startsWith("data"))
+                        .collect(Collectors.toSet());
+                if (dataFiles.isEmpty()) {
+                    final var defaultSet = new HashSet<String>();
+                    defaultSet.add("data");
+                    return defaultSet;
+                }
+                return dataFiles;
+            } catch (final IOException e) {
+                Logger.error("Failed to initialize data file cache for {}. {}", dataPath(), e.getMessage());
+                return new HashSet<>();
+            }
+        });
     }
 
     /**
@@ -197,8 +246,12 @@ public interface ChronicleDao<K, V> {
      * @throws IOException
      * 
      */
-    default void initIndex(final List<String> fields) throws IOException {
-        initIndex(fetch(), fields, dataPath() + INDEX_DIR);
+    private void initIndex(final List<String> fields) throws IOException {
+        for (final String file : getDataFiles()) {
+            try (final var db = getDb(file)) {
+                initIndex(db, fields, dataPath() + INDEX_DIR);
+            }
+        }
     }
 
     /**
@@ -209,7 +262,10 @@ public interface ChronicleDao<K, V> {
     default void refreshIndexes() throws IOException {
         final var indexFiles = indexFileNames();
         if (!indexFiles.isEmpty()) {
-            Logger.info("Re-initializing indexes at {}.", dataPath());
+            Logger.info("Re-initializing indexes at [{}].", dataPath());
+            for (final String field : indexFiles) {
+                CHRONICLE_UTILS.deleteFileIfExists(getIndexPath(field));
+            }
             initIndex(indexFiles);
         }
     }
@@ -225,7 +281,7 @@ public interface ChronicleDao<K, V> {
      * @throws IOException
      */
     default void initDefaultIndexes() throws IOException {
-        if (!CHRONICLE_UTILS.getFileList(dataPath() + DATA_DIR).isEmpty()) {
+        if (!getDataFiles().isEmpty()) {
             final Object lock = LOCKS.computeIfAbsent(dataPath(), k -> new Object());
 
             synchronized (lock) {
@@ -247,30 +303,61 @@ public interface ChronicleDao<K, V> {
     /**
      * In cases onf data corruption, we can recover the db using this method
      */
-    default void recoverData() throws IOException {
+    default void recoverData(final String dataFileName) throws IOException {
+        final var dataFileStr = dataPath() + DATA_DIR + dataFileName;
         final var db = CHRONICLE_DB.recoverDb(name(), entries(), averageKey(), averageValue(),
-                dataPath() + DATA_DIR + DATA_FILE, bloatFactor());
-        final var dbRecovery = CHRONICLE_DB.getDb(name(), entries(), averageKey(), averageValue(),
-                dataPath() + DATA_DIR + RECOVER_FILE, bloatFactor());
+                dataFileStr, bloatFactor());
+        final var dbRecovery = getDb(RECOVER_FILE);
         dbRecovery.putAll(db);
-        Files.move(Path.of(dataPath() + DATA_DIR + DATA_FILE), Path.of(dataPath() + DATA_DIR + CORRUPTED_FILE),
-                REPLACE_EXISTING);
-        Files.move(Path.of(dataPath() + DATA_DIR + RECOVER_FILE), Path.of(dataPath() + DATA_DIR + DATA_FILE),
-                REPLACE_EXISTING);
-        refreshIndexes();
+        db.close();
+        dbRecovery.close();
+        final var dataFilePath = Path.of(dataFileStr);
+        Files.move(dataFilePath, Path.of(dataFileStr + "." + CORRUPTED_FILE), REPLACE_EXISTING);
+        Files.move(Path.of(dataPath() + DATA_DIR + RECOVER_FILE), dataFilePath, REPLACE_EXISTING);
     }
 
     /**
-     * Fetches all records in the db
+     * Fetches all records in the db, never run directly for huge files
      * 
      * @return Map<K, V>
      * @throws IOException
      */
     default Map<K, V> fetch() throws IOException {
-        Logger.info("Fetching all data at {}.", dataPath());
-        try (final var db = getDb()) {
-            return new HashMap<>(db);
+        Logger.info("Fetching all data at [{}].", dataPath());
+        final Map<K, V> result = new HashMap<>();
+        for (final String file : getDataFiles()) {
+            try (final var db = getDb(file)) {
+                result.putAll(db);
+            }
         }
+        return result;
+    }
+
+    private String getDbFile(final K key, final HTreeMap<?, String> keyMap) {
+        if (keyMap == null) {
+            return DATA_FILE;
+        }
+        final var file = keyMap.get(key);
+        if (file == null) {
+            return DATA_FILE;
+        }
+
+        return file;
+    }
+
+    private Map<String, Set<K>> getDbFiles(final Set<K> keys, final HTreeMap<?, String> keyMap) {
+        if (keyMap == null) {
+            return Collections.emptyMap();
+        }
+
+        final var fileMap = new HashMap<String, Set<K>>();
+        for (final K k : keys) {
+            final var file = keyMap.get(k);
+            if (file != null) {
+                fileMap.computeIfAbsent(file, f -> new HashSet<>()).add(k);
+            }
+        }
+        return fileMap;
     }
 
     /**
@@ -281,8 +368,13 @@ public interface ChronicleDao<K, V> {
      * @throws IOException
      */
     default V get(final K key) throws IOException {
-        CHRONICLE_UTILS.getLog(name(), key, dataPath());
-        try (final var db = getDb()) {
+        if (key == null) {
+            return null;
+        }
+        final var file = getDbFile(key, KEY_MAP_CACHE.get(dataPath()));
+        Logger.info("Querying key [{}] at [{}].", key, file);
+
+        try (final var db = getDb(file)) {
             return db.getUsing(key, using());
         }
     }
@@ -295,16 +387,35 @@ public interface ChronicleDao<K, V> {
      * @throws IOException
      */
     default Map<K, V> get(final Set<K> keys) throws IOException {
-        Logger.info("Querying {} using multiple keys {} at {}.", name(), keys, dataPath());
-        try (final var db = getDb()) {
-            final var map = new HashMap<K, V>(keys.size());
-            for (final K key : keys) {
-                final V value = db.getUsing(key, using());
-                if (value != null)
-                    map.put(key, value);
+        if (keys == null || keys.isEmpty()) {
+            return Collections.emptyMap();
+        }
+        Logger.info("Querying multiple keys {} at [{}].", keys, dataPath());
+        final var map = new HashMap<K, V>(keys.size());
+
+        final var keyMap = KEY_MAP_CACHE.get(dataPath());
+        if (keyMap == null) {
+            try (final var db = getDb()) {
+                for (final K key : keys) {
+                    final V value = db.getUsing(key, using());
+                    if (value != null) {
+                        map.put(key, value);
+                    }
+                }
             }
             return map;
         }
+
+        final var dbFiles = getDbFiles(keys, keyMap);
+        for (final var entry : dbFiles.entrySet()) {
+            try (final var db = getDb(entry.getKey())) {
+                for (final K key : entry.getValue()) {
+                    map.put(key, db.getUsing(key, using()));
+                }
+            }
+        }
+
+        return map;
     }
 
     /**
@@ -315,22 +426,38 @@ public interface ChronicleDao<K, V> {
      * @throws IOException
      */
     default boolean delete(final K key) throws IOException {
-        V value = null;
-        CHRONICLE_UTILS.deleteLog(name(), key, dataPath());
-        try (final var db = getDb()) {
-            value = db.remove(key);
+        if (key == null) {
+            return false;
         }
 
-        if (value != null) {
-            CHRONICLE_UTILS.successDeleteLog(name(), key, dataPath());
-            final var indexFileNames = indexFileNames();
+        final var keyMap = KEY_MAP_CACHE.get(dataPath());
+        final var file = getDbFile(key, keyMap);
+        Logger.info("Deleting key [{}] at [{}].", key, file);
+        final var keyLock = LOCKS.computeIfAbsent(dataPath() + key, k -> new Object());
 
-            if (!indexFileNames.isEmpty())
-                CHRONICLE_UTILS.removeFromIndex(name(), dataPath(), indexFileNames, Map.of(key, value));
+        V value = null;
+        synchronized (keyLock) {
+            try (final var db = getDb(file)) {
+                value = db.remove(key);
+            }
+
+            if (value == null) {
+                return false;
+            }
+
+            if (keyMap != null) {
+                keyMap.remove(key);
+            }
+            final var indexFileNames = indexFileNames();
+            CHRONICLE_UTILS.removeFromIndex(name(), dataPath(), indexFileNames, Map.of(key, value));
+            Logger.info("[{}] deleted at [{}].", key, file);
             return true;
         }
+    }
 
-        return false;
+    private void removeFromIndex(final Map<K, V> deletedMap) throws IOException {
+        Logger.info("{} record(s) deleted at [{}].", deletedMap.size(), dataPath());
+        CHRONICLE_UTILS.removeFromIndex(name(), dataPath(), indexFileNames(), deletedMap);
     }
 
     /**
@@ -341,111 +468,127 @@ public interface ChronicleDao<K, V> {
      * @throws IOException
      */
     default boolean delete(final Set<K> keys) throws IOException {
-        var updated = false;
-        Logger.info("Deleting multiple values from {} using keys {} at {}.", name(), keys, dataPath());
-        try (final var db = getDb()) {
-            updated = db.keySet().removeAll(keys);
+        if (keys == null || keys.isEmpty()) {
+            return false;
         }
 
-        if (updated) {
-            Logger.info("Objects with keys {} deleted from {} at {}.", keys, name(), dataPath());
-            final var indexFileNames = indexFileNames();
-            if (!indexFileNames.isEmpty()) {
-                final var updatedMap = get(keys);
-                CHRONICLE_UTILS.removeFromIndex(name(), dataPath(), indexFileNames, updatedMap);
+        Logger.info("Deleting multiple values using keys {} at [{}].", keys, dataPath());
+        final Object lock = LOCKS.computeIfAbsent(dataPath(), k -> new Object());
+        synchronized (lock) {
+            final var deletedMap = new HashMap<K, V>();
+            final var keyMap = KEY_MAP_CACHE.get(dataPath());
+            if (keyMap == null) {
+                try (final var db = getDb()) {
+                    for (final K key : keys) {
+                        final var deleted = db.remove(key);
+                        if (deleted != null) {
+                            deletedMap.put(key, deleted);
+                        }
+                    }
+                }
+
+                if (deletedMap.isEmpty()) {
+                    return false;
+                }
+                removeFromIndex(deletedMap);
+                return true;
             }
-        }
 
-        return updated;
-    }
-
-    private long getCurrentEntrySize() throws NumberFormatException, IOException {
-        return Long.valueOf(Files.readString(Path.of(dataPath() + DATA_DIR + ENTRY_SIZE_FILE)));
-    }
-
-    default void setCurrentEntrySize() throws IOException {
-        final var path = Path.of(dataPath() + DATA_DIR + ENTRY_SIZE_FILE);
-
-        if (!Files.exists(path)) {
-            final var dbSize = size();
-            final long divided = (dbSize / entries());
-            final long currentEntrySize = entries() * (divided == 0 ? 1 : divided);
-            try {
-                Files.createFile(path);
-                Files.writeString(path, String.valueOf(currentEntrySize));
-            } catch (final IOException e) {
-                Logger.error("Could not create entry size file for {}.", dataPath());
+            final var dbFiles = getDbFiles(keys, keyMap);
+            if (!dbFiles.isEmpty()) {
+                for (final var entry : dbFiles.entrySet()) {
+                    try (final var db = getDb(entry.getKey())) {
+                        for (final K key : entry.getValue()) {
+                            final var deleted = db.remove(key);
+                            if (deleted != null) {
+                                keyMap.remove(key);
+                                deletedMap.put(key, deleted);
+                            }
+                        }
+                    }
+                }
             }
-        }
-    }
 
-    private long getCurrentEntrySize(final ChronicleMap<K, V> db) {
-        final var path = Path.of(dataPath() + DATA_DIR + ENTRY_SIZE_FILE);
-        final long divided = (db.size() / entries());
-        final long currentEntrySize = entries() * (divided == 0 ? 1 : divided);
-
-        if (!Files.exists(path)) {
-            try {
-                Files.createFile(path);
-                Files.writeString(path, String.valueOf(currentEntrySize));
-            } catch (final IOException e) {
-                Logger.error("Could not create entry size file for {}.", dataPath());
-                return currentEntrySize;
+            if (deletedMap.isEmpty()) {
+                return false;
             }
-        }
-
-        try {
-            return Long.valueOf(Files.readString(path));
-        } catch (NumberFormatException | IOException e) {
-            Logger.error("Could not read entry size file for {}.", dataPath());
-            try {
-                Files.writeString(path, String.valueOf(currentEntrySize));
-            } catch (final IOException e1) {
-            }
-            return currentEntrySize;
+            removeFromIndex(deletedMap);
+            return true;
         }
     }
 
-    private void writeCurrentEntrySize(final long size) {
-        final var path = Path.of(dataPath() + DATA_DIR + ENTRY_SIZE_FILE);
-        try {
-            Files.writeString(path, String.valueOf(size));
-        } catch (final IOException e) {
-            Logger.error("Could not write current entry size for {}.", dataPath());
+    default void resizeDb(final long newSize) throws IOException {
+        final Object lock = LOCKS.computeIfAbsent(dataPath(), k -> new Object());
+        synchronized (lock) {
+            try (final var db = getDb()) {
+                final long currentEntrySize = db.size();
+                if (newSize <= currentEntrySize) {
+                    Logger.warn("New size {} is not larger than current size {} at [{}]. Skipping resize.",
+                            newSize, currentEntrySize, dataPath());
+                    return;
+                }
+                final var dataFilePath = dataPath() + DATA_DIR + DATA_FILE;
+                final var backupDataFilePath = dataPath() + BACKUP_DIR + DATA_FILE;
+                final var tempDataFilePath = dataPath() + DATA_DIR + "data.tmp";
+                try (final var newDb = CHRONICLE_DB.getDb(name(), newSize, averageKey(), averageValue(),
+                        tempDataFilePath, bloatFactor())) {
+                    newDb.putAll(db);
+                }
+                Files.move(Path.of(dataFilePath), Path.of(backupDataFilePath), REPLACE_EXISTING);
+                Files.move(Path.of(tempDataFilePath), Path.of(dataFilePath), REPLACE_EXISTING);
+                Logger.info("Resized DB at [{}] from {} to {}.", dataPath(), currentEntrySize, newSize);
+            }
         }
     }
 
     /**
-     * Create a bigger file if size >= currentEntrySize
+     * Rotate files and keep the data file as latest
      * 
-     * @return
      * @throws IOException
      */
-    default void resizeDb() throws IOException {
-        final Object lock = LOCKS.computeIfAbsent(dataPath(), k -> new Object());
-        final var db = getDb();
+    private void rotateFile(final HTreeMap<K, String> keyMap) throws IOException {
+        final String rotatedFile = "data-" + System.currentTimeMillis();
+        final var currentPath = Path.of(dataPath() + DATA_DIR + DATA_FILE);
+        final var rotatedPath = Path.of(dataPath() + DATA_DIR + rotatedFile);
+        Files.move(currentPath, rotatedPath, REPLACE_EXISTING);
 
-        synchronized (lock) {
-            final long currentEntrySize = getCurrentEntrySize(db);
-            Logger.info("Checking entry size on db {}.", dataPath());
-            if (db.size() >= currentEntrySize) {
-                final var newSize = currentEntrySize + entries();
-                Logger.info("Increasing entry size on db {} from {} to {}.", dataPath(), currentEntrySize, newSize);
-                final var dataFilePath = dataPath() + DATA_DIR + DATA_FILE;
-                final var backupDataFilePath = dataPath() + BACKUP_DIR + DATA_FILE;
-                final var tempDataFilePath = dataPath() + DATA_DIR + "data.tmp";
-                writeCurrentEntrySize(newSize);
-                final var newDb = CHRONICLE_DB.getDb(name(), newSize, averageKey(), averageValue(), tempDataFilePath,
-                        bloatFactor());
-                newDb.putAll(db);
-                db.close();
-                Files.move(Path.of(dataFilePath), Path.of(backupDataFilePath), REPLACE_EXISTING);
-                Files.move(Path.of(tempDataFilePath), Path.of(dataFilePath), REPLACE_EXISTING);
-                newDb.close();
-            } else {
-                db.close();
+        try (final var oldDb = getDb(rotatedFile)) {
+            for (final K oldKey : oldDb.keySet()) {
+                keyMap.put(oldKey, rotatedFile);
             }
         }
+
+        final var currentFiles = getDataFiles();
+        currentFiles.add(rotatedFile);
+        DATA_FILE_CACHE.put(dataPath(), currentFiles);
+
+        Logger.info("Rotated data file at [{}] to {}.", dataPath(), rotatedFile);
+    }
+
+    /**
+     * First time rotation when keyMap is null
+     */
+    private HTreeMap<K, String> rotateFile() throws IOException {
+        final String rotatedFile = "data-" + System.currentTimeMillis();
+        final var currentPath = Path.of(dataPath() + DATA_DIR + DATA_FILE);
+        final var rotatedPath = Path.of(dataPath() + DATA_DIR + rotatedFile);
+        Files.move(currentPath, rotatedPath, REPLACE_EXISTING);
+        final HTreeMap<K, String> keyMap = MAP_DB.getMemoryDirectDb();
+        KEY_MAP_CACHE.put(dataPath(), keyMap);
+
+        try (final var oldDb = getDb(rotatedFile)) {
+            for (final K oldKey : oldDb.keySet()) {
+                keyMap.put(oldKey, rotatedFile);
+            }
+        }
+
+        final var currentFiles = getDataFiles();
+        currentFiles.add(rotatedFile);
+        DATA_FILE_CACHE.put(dataPath(), currentFiles);
+
+        Logger.info("Rotated data file at [{}] to {}.", dataPath(), rotatedFile);
+
+        return keyMap;
     }
 
     /**
@@ -458,24 +601,48 @@ public interface ChronicleDao<K, V> {
      */
     default PutStatus put(final K key, final V value, final List<String> indexFileNames)
             throws IOException {
-        // create a bigger file if records in db are equal to multiple of entries()
-        var status = PutStatus.INSERTED;
-        V prevValue = null;
-        try (final var db = getDb()) {
-            prevValue = db.put(key, value);
+        if (key == null) {
+            return PutStatus.FAILED;
         }
 
-        final var prevValueMap = new HashMap<K, V>(1);
-        if (prevValue != null) {
-            prevValueMap.put(key, prevValue);
-            status = PutStatus.UPDATED;
+        final Object lock = LOCKS.computeIfAbsent(dataPath(), k -> new Object());
+        synchronized (lock) {
+            var keyMap = (HTreeMap<K, String>) KEY_MAP_CACHE.get(dataPath());
+            var file = getDbFile(key, keyMap);
+            var db = getDb(file);
+            V prevValue = null;
+
+            try {
+                if (DATA_FILE.equals(file)) {
+                    if (db.size() >= entries()) {
+                        db.close();
+                        if (keyMap == null) {
+                            keyMap = rotateFile();
+                        } else {
+                            rotateFile(keyMap);
+                        }
+                        db = getDb();
+                        file = DATA_FILE;
+                    }
+                }
+                prevValue = db.put(key, value);
+            } finally {
+                db.close();
+            }
+            var status = PutStatus.INSERTED;
+            if (prevValue != null) {
+                CHRONICLE_UTILS.updateIndex(name(), dataPath(), indexFileNames, Map.of(key, value),
+                        Map.of(key, prevValue));
+                status = PutStatus.UPDATED;
+            } else {
+                if (keyMap != null)
+                    keyMap.put(key, file);
+                CHRONICLE_UTILS.updateIndex(name(), dataPath(), indexFileNames, Map.of(key, value),
+                        Collections.emptyMap());
+            }
+            Logger.info("Put status [{}] using key [{}] at [{}].", status, key, dataPath());
+            return status;
         }
-
-        CHRONICLE_UTILS.updateIndex(name(), dataPath(), indexFileNames, Map.of(key, value), prevValueMap);
-
-        Logger.info("{} into {} using key {} at {}.", status, name(), key, dataPath());
-
-        return status;
     }
 
     /**
@@ -496,15 +663,31 @@ public interface ChronicleDao<K, V> {
      */
     default PutStatus update(final K key, final V value, final List<String> indexFileNames)
             throws IOException {
-        V prevValue = null;
-        try (final var db = getDb()) {
-            prevValue = db.put(key, value);
+        if (key == null) {
+            return PutStatus.FAILED;
         }
 
-        CHRONICLE_UTILS.updateIndex(name(), dataPath(), indexFileNames, Map.of(key, value), Map.of(key, prevValue));
-        Logger.info("UPDATED into {} using key {} at {}.", name(), key, dataPath());
+        final Object lock = LOCKS.computeIfAbsent(dataPath(), k -> new Object());
+        synchronized (lock) {
+            final var file = getDbFile(key, KEY_MAP_CACHE.get(dataPath()));
+            var status = PutStatus.FAILED;
+            V prevValue = null;
 
-        return PutStatus.UPDATED;
+            try (final var db = getDb(file)) {
+                if (db.containsKey(key)) {
+                    status = PutStatus.UPDATED;
+                    prevValue = db.put(key, value);
+                }
+            }
+
+            if (status == PutStatus.UPDATED) {
+                CHRONICLE_UTILS.updateIndex(name(), dataPath(), indexFileNames, Map.of(key, value),
+                        Map.of(key, prevValue));
+            }
+            Logger.info("Update status [{}] using key [{}] at [{}].", status, key, dataPath());
+
+            return status;
+        }
     }
 
     /**
@@ -522,77 +705,103 @@ public interface ChronicleDao<K, V> {
      * @throws IOException
      */
     default PutStatus put(final Map<K, V> map) throws IOException {
-        if (map.size() > entries()) {
-            Logger.error("Insert size bigger than entry size.");
+        if (map == null || map.isEmpty()) {
             return PutStatus.FAILED;
         }
 
-        Logger.info("Inserting multiple values into {} at {}.", name(), dataPath());
-        final var prevValues = new HashMap<K, V>(map.size());
-        try (final var db = getDb()) {
-            for (final var entry : map.entrySet()) {
-                final K key = entry.getKey();
-                final V oldValue = db.getUsing(key, using());
-                if (oldValue != null) {
-                    prevValues.put(key, oldValue);
+        final Object lock = LOCKS.computeIfAbsent(dataPath(), k -> new Object());
+        synchronized (lock) {
+            final var prevValues = new HashMap<K, V>(map.size());
+
+            // update old records first then only move to new record inserts.
+            var keyMap = (HTreeMap<K, String>) KEY_MAP_CACHE.get(dataPath());
+            final var dbFiles = getDbFiles(map.keySet(), keyMap);
+
+            for (final var entry : dbFiles.entrySet()) {
+                try (final var db = getDb(entry.getKey())) {
+                    for (final K key : entry.getValue()) {
+                        prevValues.put(key, db.put(key, map.get(key)));
+                    }
                 }
             }
-            db.putAll(map);
+
+            final var status = !prevValues.isEmpty() ? PutStatus.UPDATED : PutStatus.INSERTED;
+            final var indexCopyMap = new HashMap<>(map);
+            // now do inserts after removing the updating keys
+            map.keySet().removeAll(prevValues.keySet());
+
+            if (!map.isEmpty()) {
+                var db = getDb();
+                try {
+                    for (final var entry : map.entrySet()) {
+                        final K key = entry.getKey();
+                        final V value = entry.getValue();
+                        if (db.size() >= entries()) {
+                            db.close();
+                            if (keyMap == null) {
+                                keyMap = rotateFile();
+                            } else {
+                                rotateFile(keyMap);
+                            }
+                            db = getDb();
+                        }
+                        db.put(key, value);
+                        if (keyMap != null) {
+                            keyMap.put(key, DATA_FILE);
+                        }
+                    }
+                } finally {
+                    db.close();
+                }
+            }
+
+            CHRONICLE_UTILS.updateIndex(name(), dataPath(), indexFileNames(), indexCopyMap, prevValues);
+            Logger.info("Put {} records at [{}].", map.size(), dataPath());
+
+            return status;
         }
-
-        final var indexFileNames = indexFileNames();
-        if (!indexFileNames.isEmpty())
-            CHRONICLE_UTILS.updateIndex(name(), dataPath(), indexFileNames, map, prevValues);
-
-        return PutStatus.INSERTED;
-    }
-
-    default PutStatus put(final Map<K, V> map, final Map<K, V> prevValues) throws IOException {
-        if (map.size() > entries()) {
-            Logger.error("Insert size bigger than entry size.");
-            return PutStatus.FAILED;
-        }
-
-        Logger.info("Inserting multiple values into {} at {}.", name(), dataPath());
-        try (final var db = getDb()) {
-            db.putAll(map);
-        }
-
-        final var indexFileNames = indexFileNames();
-        if (!indexFileNames.isEmpty())
-            CHRONICLE_UTILS.updateIndex(name(), dataPath(), indexFileNames, map, prevValues);
-
-        return PutStatus.INSERTED;
     }
 
     /**
      * Update multiple values into the db, then update all indexes related
-     * This is useful as it does not increase db size
+     * This is useful as it does not increase db size. Never run with non existent
+     * keys
+     * it wont insert
      * 
      * @param map the map to add
      * @throws IOException
      */
     default PutStatus update(final Map<K, V> map) throws IOException {
-        if (map.size() > entries()) {
-            Logger.error("Update size bigger than entry size.");
+        if (map == null || map.isEmpty()) {
             return PutStatus.FAILED;
         }
 
-        Logger.info("Updating multiple values into {} at {}.", name(), dataPath());
-        final var prevValues = new HashMap<K, V>(map.size());
-        try (final var db = getDb()) {
-            for (final var entry : map.entrySet()) {
-                final K key = entry.getKey();
-                prevValues.put(key, db.get(key));
+        final Object lock = LOCKS.computeIfAbsent(dataPath(), k -> new Object());
+        synchronized (lock) {
+            final var keyMap = (HTreeMap<K, String>) KEY_MAP_CACHE.get(dataPath());
+            final var dbFiles = getDbFiles(map.keySet(), keyMap);
+            final var prevValues = new HashMap<K, V>(map.size());
+
+            for (final var entry : dbFiles.entrySet()) {
+                try (final var db = getDb(entry.getKey())) {
+                    for (final K key : entry.getValue()) {
+                        if (db.containsKey(key)) {
+                            prevValues.put(key, db.put(key, map.get(key)));
+                        }
+                    }
+                }
             }
-            db.putAll(map);
+
+            if (prevValues.size() != map.size()) {
+                Logger.error("Update map contains {} new or missing keys, expected all existing records at [{}].",
+                        map.size() - prevValues.size(), dataPath());
+                return PutStatus.FAILED;
+            }
+
+            CHRONICLE_UTILS.updateIndex(name(), dataPath(), indexFileNames(), map, prevValues);
+            Logger.info("Update {} records at [{}].", prevValues.size(), dataPath());
+            return PutStatus.UPDATED;
         }
-
-        final var indexFileNames = indexFileNames();
-        if (!indexFileNames.isEmpty())
-            CHRONICLE_UTILS.updateIndex(name(), dataPath(), indexFileNames, map, prevValues);
-
-        return PutStatus.UPDATED;
     }
 
     /**
@@ -602,29 +811,57 @@ public interface ChronicleDao<K, V> {
      * @throws IOException
      */
     default PutStatus putAll(final Map<K, V> map) throws IOException {
-        if (map.size() > entries()) {
-            Logger.error("Insert size bigger than entry size.");
+        if (map == null || map.isEmpty()) {
             return PutStatus.FAILED;
         }
 
-        Logger.info("Inserting multiple values into {} at {}.", name(), dataPath());
-        try (final var db = getDb()) {
-            db.putAll(map);
-        }
+        final Object lock = LOCKS.computeIfAbsent(dataPath(), k -> new Object());
+        synchronized (lock) {
+            final var prevValues = new HashMap<K, V>(map.size());
 
-        return PutStatus.INSERTED;
-    }
+            // update old records first then only move to new record inserts.
+            var keyMap = (HTreeMap<K, String>) KEY_MAP_CACHE.get(dataPath());
+            final var dbFiles = getDbFiles(map.keySet(), keyMap);
 
-    /**
-     * Migrate all records
-     * 
-     * @param map the map to add
-     * @throws IOException
-     */
-    default void migrate(final Map<K, V> map) throws IOException {
-        Logger.info("Migrating values into {} at {}.", name(), dataPath());
-        try (final var db = getDb()) {
-            db.putAll(map);
+            for (final var entry : dbFiles.entrySet()) {
+                try (final var db = getDb(entry.getKey())) {
+                    for (final K key : entry.getValue()) {
+                        prevValues.put(key, db.put(key, map.get(key)));
+                    }
+                }
+            }
+
+            final var status = !prevValues.isEmpty() ? PutStatus.UPDATED : PutStatus.INSERTED;
+            // now do inserts after removing the updating keys
+            map.keySet().removeAll(prevValues.keySet());
+
+            if (!map.isEmpty()) {
+                var db = getDb();
+                try {
+                    for (final var entry : map.entrySet()) {
+                        final K key = entry.getKey();
+                        final V value = entry.getValue();
+                        if (db.size() >= entries()) {
+                            db.close();
+                            if (keyMap == null) {
+                                keyMap = rotateFile();
+                            } else {
+                                rotateFile(keyMap);
+                            }
+                            db = getDb();
+                        }
+                        db.put(key, value);
+                        if (keyMap != null) {
+                            keyMap.put(key, DATA_FILE);
+                        }
+                    }
+                } finally {
+                    db.close();
+                }
+            }
+            Logger.info("Put {} records at [{}].", map.size(), dataPath());
+
+            return status;
         }
     }
 
@@ -685,10 +922,17 @@ public interface ChronicleDao<K, V> {
      * @throws IOException
      */
     default Map<K, V> search(final Search search) throws IOException {
-        Logger.info("Searching DB at {} for {}.", dataPath(), search);
-        try (final var db = getDb()) {
-            return search(db, search);
+        Logger.info("Searching DB at [{}] for {}.", dataPath(), search);
+        final Map<K, V> results = new HashMap<>();
+        final var files = getDataFiles();
+
+        for (final String file : files) {
+            try (final var db = getDb(file)) {
+                results.putAll(search(db, search));
+            }
         }
+
+        return results;
     }
 
     /**
@@ -699,33 +943,20 @@ public interface ChronicleDao<K, V> {
      * @throws IOException
      */
     default Map<K, V> search(final Search search, final int limit) throws IOException {
-        Logger.info("Searching DB at {} for {} with limit {}.", dataPath(), search, limit);
-        try (final var db = getDb()) {
-            return search(db, search, limit);
+        Logger.info("Searching DB at [{}] for {} with limit {}.", dataPath(), search, limit);
+        final Map<K, V> results = new HashMap<>();
+        final var files = getDataFiles();
+
+        for (final String file : files) {
+            if (results.size() >= limit) {
+                break;
+            }
+            try (final var db = getDb(file)) {
+                results.putAll(search(db, search, limit));
+            }
         }
-    }
 
-    private void addSearchedValues(final List<K> keys, final Map<K, V> db, final Map<K, V> match) {
-        if (keys != null)
-            for (final var key : keys) {
-                final V value = db.get(key);
-                if (value != null)
-                    match.put(key, value);
-            }
-    }
-
-    private void addSearchedValues(final List<K> keys, final Map<K, V> db, final Map<K, V> match,
-            final int limit) {
-        if (keys != null)
-            for (final var key : keys) {
-                final V value = db.get(key);
-                if (value != null)
-                    match.put(key, value);
-
-                if (match.size() == limit) {
-                    return;
-                }
-            }
+        return results;
     }
 
     /**
@@ -736,19 +967,19 @@ public interface ChronicleDao<K, V> {
      * @param db
      * @param index
      */
-    @SuppressWarnings("unchecked")
-    private Map<K, V> indexedSearch(final Search search, final Map<K, V> db, final Map<Object, List<K>> index) {
-        Logger.info("Index searching DB at {} for {}.", dataPath(), search);
-        if (index == null || index.isEmpty())
-            return new HashMap<>();
+    private Set<K> indexedSearch(final Search search, final Map<Object, List<K>> index) {
+        Logger.info("Index searching at [{}] for {}.", dataPath(), search);
+        if (index == null || index.isEmpty()) {
+            return Collections.emptySet();
+        }
 
-        final Map<K, V> match = new HashMap<>();
-        final List<K> keys = new ArrayList<>();
+        final Set<K> matchingKeys = new HashSet<>();
         final SearchType searchType = search.searchType();
         final Class<?> fieldClass = index.keySet().stream().filter(Objects::nonNull).findFirst()
                 .map(Object::getClass).orElse(null);
-        if (fieldClass == null)
-            return match;
+        if (fieldClass == null) {
+            return matchingKeys;
+        }
 
         final Object searchTerm = CHRONICLE_UTILS.setSearchTerm(search.searchTerm(), fieldClass);
         final List<Object> searchTermList = (searchType == SearchType.IN || searchType == SearchType.NOT_IN)
@@ -756,53 +987,57 @@ public interface ChronicleDao<K, V> {
                 : null;
 
         switch (searchType) {
-            case EQUAL -> addSearchedValues(index.get(searchTerm), db, match);
+            case EQUAL -> {
+                final List<K> keys = index.get(searchTerm);
+                if (keys != null)
+                    matchingKeys.addAll(keys);
+            }
             case NOT_EQUAL -> {
                 for (final var entry : index.entrySet()) {
                     if (!entry.getKey().equals(searchTerm)) {
-                        addSearchedValues(entry.getValue(), db, match);
+                        matchingKeys.addAll(entry.getValue());
                     }
                 }
             }
             case LESS -> {
                 for (final var entry : index.entrySet()) {
                     if (CHRONICLE_UTILS.compare(entry.getKey(), searchTerm) < 0) {
-                        keys.addAll(entry.getValue());
+                        matchingKeys.addAll(entry.getValue());
                     }
                 }
             }
             case GREATER -> {
                 for (final var entry : index.entrySet()) {
                     if (CHRONICLE_UTILS.compare(entry.getKey(), searchTerm) > 0) {
-                        keys.addAll(entry.getValue());
+                        matchingKeys.addAll(entry.getValue());
                     }
                 }
             }
             case LESS_OR_EQUAL -> {
                 for (final var entry : index.entrySet()) {
                     if (CHRONICLE_UTILS.compare(entry.getKey(), searchTerm) <= 0) {
-                        keys.addAll(entry.getValue());
+                        matchingKeys.addAll(entry.getValue());
                     }
                 }
             }
             case GREATER_OR_EQUAL -> {
                 for (final var entry : index.entrySet()) {
                     if (CHRONICLE_UTILS.compare(entry.getKey(), searchTerm) >= 0) {
-                        keys.addAll(entry.getValue());
+                        matchingKeys.addAll(entry.getValue());
                     }
                 }
             }
             case LIKE -> {
                 for (final var entry : index.entrySet()) {
                     if (CHRONICLE_UTILS.containsIgnoreCase(entry.getKey(), searchTerm)) {
-                        keys.addAll(entry.getValue());
+                        matchingKeys.addAll(entry.getValue());
                     }
                 }
             }
             case NOT_LIKE -> {
                 for (final var entry : index.entrySet()) {
                     if (!CHRONICLE_UTILS.containsIgnoreCase(entry.getKey(), searchTerm)) {
-                        keys.addAll(entry.getValue());
+                        matchingKeys.addAll(entry.getValue());
                     }
                 }
             }
@@ -811,7 +1046,7 @@ public interface ChronicleDao<K, V> {
                 for (final var entry : index.entrySet()) {
                     for (final var obj : (Object[]) entry.getKey()) {
                         if (obj.equals(searchTerm))
-                            keys.addAll(entry.getValue());
+                            matchingKeys.addAll(entry.getValue());
                     }
                 }
             }
@@ -819,68 +1054,56 @@ public interface ChronicleDao<K, V> {
                 for (final var entry : index.entrySet()) {
                     for (final var obj : (Object[]) entry.getKey()) {
                         if (!obj.equals(searchTerm))
-                            keys.addAll(entry.getValue());
+                            matchingKeys.addAll(entry.getValue());
                     }
                 }
             }
             case STARTS_WITH -> {
                 for (final var entry : index.entrySet()) {
                     if (String.valueOf(entry.getKey()).startsWith(String.valueOf(searchTerm))) {
-                        keys.addAll(entry.getValue());
+                        matchingKeys.addAll(entry.getValue());
                     }
                 }
             }
             case ENDS_WITH -> {
                 for (final var entry : index.entrySet()) {
                     if (String.valueOf(entry.getKey()).endsWith(String.valueOf(searchTerm))) {
-                        keys.addAll(entry.getValue());
+                        matchingKeys.addAll(entry.getValue());
                     }
                 }
             }
             case IN -> {
                 for (final var entry : index.entrySet()) {
                     if (searchTermList.contains(entry.getKey())) {
-                        keys.addAll(entry.getValue());
+                        matchingKeys.addAll(entry.getValue());
                     }
                 }
             }
             case NOT_IN -> {
                 for (final var entry : index.entrySet()) {
                     if (!searchTermList.contains(entry.getKey())) {
-                        keys.addAll(entry.getValue());
+                        matchingKeys.addAll(entry.getValue());
                     }
                 }
             }
         }
 
-        if (!keys.isEmpty())
-            addSearchedValues(keys, db, match);
-        return match;
+        return matchingKeys;
     }
 
-    /**
-     * Searches the objects using an index, without needed to loop over every record
-     * Only useful for @code SearchType.EQUAL and @code SearchType.NOT_EQUAL
-     * 
-     * @param search the Search object
-     * @param db
-     * @param index
-     * @param limit
-     */
-    @SuppressWarnings("unchecked")
-    private Map<K, V> indexedSearch(final Search search, final Map<K, V> db, final Map<Object, List<K>> index,
-            final int limit) {
-        Logger.info("Index searching DB at {} for {} with limit {}.", dataPath(), search, limit);
-        if (index == null || index.isEmpty())
-            return new HashMap<>();
+    private Set<K> indexedSearch(final Search search, final Map<Object, List<K>> index, final int limit) {
+        Logger.info("Index searching at [{}] for {}.", dataPath(), search);
+        if (index == null || index.isEmpty()) {
+            return Collections.emptySet();
+        }
 
-        final Map<K, V> match = new HashMap<>();
-        final List<K> keys = new ArrayList<>();
+        final Set<K> matchingKeys = new HashSet<>();
         final SearchType searchType = search.searchType();
         final Class<?> fieldClass = index.keySet().stream().filter(Objects::nonNull).findFirst()
                 .map(Object::getClass).orElse(null);
-        if (fieldClass == null)
-            return match;
+        if (fieldClass == null) {
+            return matchingKeys;
+        }
 
         final Object searchTerm = CHRONICLE_UTILS.setSearchTerm(search.searchTerm(), fieldClass);
         final List<Object> searchTermList = (searchType == SearchType.IN || searchType == SearchType.NOT_IN)
@@ -888,165 +1111,248 @@ public interface ChronicleDao<K, V> {
                 : null;
 
         switch (searchType) {
-            case EQUAL -> addSearchedValues(index.get(searchTerm), db, match, limit);
+            case EQUAL -> {
+                final List<K> keys = index.get(searchTerm);
+                if (keys != null) {
+                    if (keys.size() <= limit)
+                        matchingKeys.addAll(keys);
+                    else
+                        keys.stream().limit(limit).forEach(matchingKeys::add);
+                }
+            }
             case NOT_EQUAL -> {
                 for (final var entry : index.entrySet()) {
+                    if (matchingKeys.size() >= limit)
+                        break;
                     if (!entry.getKey().equals(searchTerm)) {
-                        addSearchedValues(entry.getValue(), db, match, limit);
+                        entry.getValue().stream().limit(limit - matchingKeys.size())
+                                .forEach(matchingKeys::add);
                     }
                 }
             }
             case LESS -> {
                 for (final var entry : index.entrySet()) {
+                    if (matchingKeys.size() >= limit)
+                        break;
                     if (CHRONICLE_UTILS.compare(entry.getKey(), searchTerm) < 0) {
-                        keys.addAll(entry.getValue());
+                        entry.getValue().stream().limit(limit - matchingKeys.size())
+                                .forEach(matchingKeys::add);
                     }
                 }
             }
             case GREATER -> {
                 for (final var entry : index.entrySet()) {
+                    if (matchingKeys.size() >= limit)
+                        break;
                     if (CHRONICLE_UTILS.compare(entry.getKey(), searchTerm) > 0) {
-                        keys.addAll(entry.getValue());
+                        entry.getValue().stream().limit(limit - matchingKeys.size())
+                                .forEach(matchingKeys::add);
                     }
                 }
             }
             case LESS_OR_EQUAL -> {
                 for (final var entry : index.entrySet()) {
+                    if (matchingKeys.size() >= limit)
+                        break;
                     if (CHRONICLE_UTILS.compare(entry.getKey(), searchTerm) <= 0) {
-                        keys.addAll(entry.getValue());
+                        entry.getValue().stream().limit(limit - matchingKeys.size())
+                                .forEach(matchingKeys::add);
                     }
                 }
             }
             case GREATER_OR_EQUAL -> {
                 for (final var entry : index.entrySet()) {
+                    if (matchingKeys.size() >= limit)
+                        break;
                     if (CHRONICLE_UTILS.compare(entry.getKey(), searchTerm) >= 0) {
-                        keys.addAll(entry.getValue());
+                        entry.getValue().stream().limit(limit - matchingKeys.size())
+                                .forEach(matchingKeys::add);
                     }
                 }
             }
             case LIKE -> {
                 for (final var entry : index.entrySet()) {
+                    if (matchingKeys.size() >= limit)
+                        break;
                     if (CHRONICLE_UTILS.containsIgnoreCase(entry.getKey(), searchTerm)) {
-                        keys.addAll(entry.getValue());
+                        entry.getValue().stream().limit(limit - matchingKeys.size())
+                                .forEach(matchingKeys::add);
                     }
                 }
             }
             case NOT_LIKE -> {
                 for (final var entry : index.entrySet()) {
+                    if (matchingKeys.size() >= limit)
+                        break;
                     if (!CHRONICLE_UTILS.containsIgnoreCase(entry.getKey(), searchTerm)) {
-                        keys.addAll(entry.getValue());
+                        entry.getValue().stream().limit(limit - matchingKeys.size())
+                                .forEach(matchingKeys::add);
                     }
                 }
             }
             case CONTAINS -> {
                 for (final var entry : index.entrySet()) {
+                    if (matchingKeys.size() >= limit)
+                        break;
                     if (Collections.singleton(entry.getKey()).contains(searchTerm)) {
-                        keys.addAll(entry.getValue());
+                        entry.getValue().stream().limit(limit - matchingKeys.size())
+                                .forEach(matchingKeys::add);
                     }
                 }
             }
             case NOT_CONTAINS -> {
                 for (final var entry : index.entrySet()) {
+                    if (matchingKeys.size() >= limit)
+                        break;
                     if (!Collections.singleton(entry.getKey()).contains(searchTerm)) {
-                        keys.addAll(entry.getValue());
+                        entry.getValue().stream().limit(limit - matchingKeys.size())
+                                .forEach(matchingKeys::add);
                     }
                 }
             }
             case STARTS_WITH -> {
                 for (final var entry : index.entrySet()) {
+                    if (matchingKeys.size() >= limit)
+                        break;
                     if (String.valueOf(entry.getKey()).startsWith(String.valueOf(searchTerm))) {
-                        keys.addAll(entry.getValue());
+                        entry.getValue().stream().limit(limit - matchingKeys.size())
+                                .forEach(matchingKeys::add);
                     }
                 }
             }
             case ENDS_WITH -> {
                 for (final var entry : index.entrySet()) {
+                    if (matchingKeys.size() >= limit)
+                        break;
                     if (String.valueOf(entry.getKey()).endsWith(String.valueOf(searchTerm))) {
-                        keys.addAll(entry.getValue());
+                        entry.getValue().stream().limit(limit - matchingKeys.size())
+                                .forEach(matchingKeys::add);
                     }
                 }
             }
             case IN -> {
                 for (final var entry : index.entrySet()) {
+                    if (matchingKeys.size() >= limit)
+                        break;
                     if (searchTermList.contains(entry.getKey())) {
-                        keys.addAll(entry.getValue());
+                        entry.getValue().stream().limit(limit - matchingKeys.size())
+                                .forEach(matchingKeys::add);
                     }
                 }
             }
             case NOT_IN -> {
                 for (final var entry : index.entrySet()) {
+                    if (matchingKeys.size() >= limit)
+                        break;
                     if (!searchTermList.contains(entry.getKey())) {
-                        keys.addAll(entry.getValue());
+                        entry.getValue().stream().limit(limit - matchingKeys.size())
+                                .forEach(matchingKeys::add);
                     }
                 }
             }
         }
 
-        if (!keys.isEmpty())
-            addSearchedValues(keys, db, match, limit);
-        return match;
+        return matchingKeys;
     }
 
     default Map<K, V> indexedSearch(final Search search) throws IOException {
         final var indexFilePath = getIndexPath(search.field());
+        Set<K> matchingKeys = new HashSet<K>();
 
-        try (final var db = getDb()) {
-            final HTreeMap<Object, List<K>> indexDb = MAP_DB.getDb(indexFilePath);
-            if (indexDb != null) {
-                try {
-                    return indexedSearch(search, db, indexDb);
-                } finally {
-                    MAP_DB.close(indexFilePath);
-                }
+        final HTreeMap<Object, List<K>> indexDb = MAP_DB.getDb(indexFilePath);
+        if (indexDb != null) {
+            try {
+                matchingKeys = indexedSearch(search, indexDb);
+            } finally {
+                MAP_DB.close(indexFilePath);
             }
         }
 
-        return Map.of();
+        if (!matchingKeys.isEmpty()) {
+            return get(matchingKeys);
+        }
+
+        return Collections.emptyMap();
     }
 
     default Map<K, V> indexedSearch(final Search search, final int limit) throws IOException {
-        final var indexFilePath = getIndexPath(search.field());
+        if (limit <= 0) {
+            return Collections.emptyMap();
+        }
 
-        try (final var db = getDb()) {
-            final HTreeMap<Object, List<K>> indexDb = MAP_DB.getDb(indexFilePath);
-            if (indexDb != null) {
-                try {
-                    return indexedSearch(search, db, indexDb, limit);
-                } finally {
-                    MAP_DB.close(indexFilePath);
-                }
+        final var indexFilePath = getIndexPath(search.field());
+        Set<K> matchingKeys = new HashSet<K>();
+
+        final HTreeMap<Object, List<K>> indexDb = MAP_DB.getDb(indexFilePath);
+        if (indexDb != null) {
+            try {
+                matchingKeys = indexedSearch(search, indexDb, limit);
+            } finally {
+                MAP_DB.close(indexFilePath);
             }
         }
 
-        return Map.of();
+        if (!matchingKeys.isEmpty()) {
+            return get(matchingKeys);
+        }
+
+        return Collections.emptyMap();
     }
 
     default Map<K, V> indexedSearch(final Map<K, V> db, final Search search) {
+        if (db == null || db.isEmpty()) {
+            return Collections.emptyMap();
+        }
+
         final var indexFilePath = getIndexPath(search.field());
+        Set<K> matchingKeys = new HashSet<>();
+        final Map<K, V> results = new HashMap<>();
+
         final HTreeMap<Object, List<K>> indexDb = MAP_DB.getDb(indexFilePath);
         if (indexDb != null) {
             try {
-                return indexedSearch(search, db, indexDb);
+                matchingKeys = indexedSearch(search, indexDb);
             } finally {
                 MAP_DB.close(indexFilePath);
             }
         }
 
-        return Map.of();
+        for (final K key : matchingKeys) {
+            final V value = db.get(key);
+            if (value != null) {
+                results.put(key, value);
+            }
+        }
+
+        return results;
     }
 
     default Map<K, V> indexedSearch(final Map<K, V> db, final Search search, final int limit) {
+        if (db == null || db.isEmpty() || limit <= 0) {
+            return Collections.emptyMap();
+        }
+
         final var indexFilePath = getIndexPath(search.field());
+        Set<K> matchingKeys = new HashSet<>();
+        final Map<K, V> results = new HashMap<>();
+
         final HTreeMap<Object, List<K>> indexDb = MAP_DB.getDb(indexFilePath);
         if (indexDb != null) {
             try {
-                return indexedSearch(search, db, indexDb, limit);
+                matchingKeys = indexedSearch(search, indexDb, limit);
             } finally {
                 MAP_DB.close(indexFilePath);
             }
         }
 
-        return Map.of();
+        for (final K key : matchingKeys) {
+            final V value = db.get(key);
+            if (value != null) {
+                results.put(key, value);
+            }
+        }
+
+        return results;
     }
 
     /**
@@ -1074,25 +1380,31 @@ public interface ChronicleDao<K, V> {
      * @throws IOException
      */
     default int size() throws IOException {
-        try (final var db = getDb()) {
-            Logger.info("Getting DB size at {}.", dataPath());
-            return db.size();
-        }
-    }
+        Logger.info("Getting DB size at [{}].", dataPath());
+        int size = 0;
+        final var files = getDataFiles();
 
-    default void clearDb() throws IOException {
-        try (final var db = getDb()) {
-            Logger.info("Truncating database at {}.", dataPath());
-            db.clear();
+        for (final var file : files) {
+            try (final var db = getDb(file)) {
+                size += db.size();
+            }
         }
+
+        return size;
     }
 
     default void deleteDataFiles() throws IOException {
-        CHRONICLE_UTILS.deleteFileIfExists(dataPath() + DATA_DIR + DATA_FILE);
+        Logger.info("Truncating database at [{}].", dataPath());
+        final var files = getDataFiles();
+        for (final var file : files) {
+            CHRONICLE_UTILS.deleteFileIfExists(dataPath() + DATA_DIR + file);
+        }
     }
 
     default boolean exists(final K key) throws IOException {
-        try (final var db = getDb()) {
+        final var keyMap = KEY_MAP_CACHE.get(key);
+        final var file = getDbFile(key, keyMap);
+        try (final var db = getDb(file)) {
             return db.containsKey(key);
         }
     }
